[package]
name = "catalyst-fund-archive-tool"
version = "0.1.0"
authors = ["Yevhenii Babichenko <eugene.babichenko@iohk.io>"]
edition = "2018"

[dependencies]
structopt = "0.3"
csv = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"

chain-storage = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-ser = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chain-addr = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", rev = "1955f6a1a60bc66635cdd67460872ff7e4c29022" }
poldercast = { git = "https://github.com/primetype/poldercast.git", rev = "8305f1560392a9d26673ca996e7646c8834533ef" }
eccoxide = { git = "https://github.com/eugene-babichenko/eccoxide.git", branch = "fast-u64-scalar-mul", features = ["fast-u64-scalar-mul"], optional = true }
